fixed right button missalignment

--- a/docs/doks-theme/_sass/components/_page-nav.scss
+++ b/docs/doks-theme/_sass/components/_page-nav.scss
@@ -63,6 +63,9 @@
 }
 
 .page-nav__item__right {
+	a{
+		flex: 0;
+	}
 	justify-content: flex-start;
 
 	&:focus,
